# basic-api

./: .dockerignore  .env-example  .env.example  .gitignore  Cargo.toml  Diesel.Dockerfile  Dockerfile  README.md  create_certs.sh  docker-compose.yaml  docker-compsoe.yaml  run_api.sh
migrations/2022-07-17-221501_loggable_enum/: down.sql  up.sql
migrations/2022-07-18-005711_basics/: down.sql  up.sql
migrations/2022-07-18-005838_credentials/: down.sql  up.sql
migrations/2022-07-18-005951_users/: up.sql
migrations/2022-07-21-015300_create_organizations/: up.sql
scripts/: build_images.sh  create_certs.sh  run_api.sh  wait_for_postgres.sh
src/: app.rs  application.rs  config.rs  core.rs  main.rs  schema.rs  utils.rs
src/application/: credentials.rs  login.rs  users.rs
src/application/credentials/: handler.rs  model.rs  router.rs  service.rs
src/application/organizations/: handler.rs  model.rs  router.rs  service.rs
src/application/users/: handler.rs  model.rs  router.rs  service.rs
src/core/: credentials.rs  errors.rs  helpers.rs  middlewares.rs  middlewares_services.rs  pagination.rs  response.rs  response_model.rs  server_model.rs  server_service.rs  token_model.rs  tokens.rs  websockets_handler.rs
src/utils/: database.rs  passwords.rs  server.rs  traits.rs
src/work/users/: handler.rs  model.rs
